src/main/java/com/example/appointment_scheduler/error/UserNotFoundException.java
package com.example.appointment_scheduler.error;

public class UserNotFoundException extends Exception{
    public UserNotFoundException(String message) {
        super(message);
    }
    
}